--- a/Meta/Templates/AllInitPrinter.tt
+++ b/Meta/Templates/AllInitPrinter.tt
@@ -9,6 +9,9 @@ namespace <#= Namespace #>
     {
         public static void Init()
         {
+<# /* TODO: make mods hardcode a consistent mod id, in order to be independent of their import order */ #>
+<# /* Store it in a mod config of sorts, maybe a json, which would include the data about the mod */ #>
+<# /* Load it dynamically? */ #>
             int modId = Registry.Global.NextMod();            
 <#  foreach(var component in components) 
     { #>
@@ -37,23 +40,23 @@ namespace <#= Namespace #>
 <#  } 
     foreach (var slot in slots) 
     { #>
-            <#= slot.FullyQualifiedName #>.Id = Registry.Global.NextSlotId();
+            <#= slot.FullyQualifiedName #>.Id = Registry.Global.Slot.NextIdentifierForCurrentMod();
 <#  }
     foreach (var stat in statRootScope.GetAllChildrenValues()) 
     {
         if (!stat.IsIdentifying && !stat.IsIdentified) 
         { #>
-            <#= stat.QualifiedName #>.Index.Id = Registry.Global.RegisterStat(<#= stat.QualifiedName #>.Default());
+            <#= stat.QualifiedName #>.Index.Id = Registry.Global.Stats.AddForCurrentMod(<#= stat.QualifiedName #>.Default());
 <#      }
         foreach (var identifyingField in stat.staticIndentiyingFields) 
         { #>
-            <#= stat.QualifiedName #>.<#= identifyingField.name #>.Index.Id = Registry.Global.RegisterStat(<#= stat.QualifiedName #>.<#= identifyingField.name #>.Default());
+            <#= stat.QualifiedName #>.<#= identifyingField.name #>.Index.Id = Registry.Global.Stats.AddForCurrentMod(<#= stat.QualifiedName #>.<#= identifyingField.name #>.Default());
 <#      }
         
     }
     foreach (var identifyingField in staticIndentiyingStatFields) 
     { #>
-            <#= identifyingField.FullyQualifiedName #>.Index.Id = Registry.Global.RegisterStat(<#= identifyingField.FullyQualifiedName #>.Default());
+            <#= identifyingField.FullyQualifiedName #>.Index.Id = Registry.Global.Stats.AddForCurrentMod(<#= identifyingField.FullyQualifiedName #>.Default());
 <#  }
     foreach (var entityType in entityTypes) 
     { /* TODO: Link the metadata (the name or whatever) */#>
@@ -62,7 +65,7 @@ namespace <#= Namespace #>
                 <#= entityType.FullyQualifiedClassName #>.AddComponents(factory);
                 <#= entityType.FullyQualifiedClassName #>.InitComponents(factory);
                 <#= entityType.FullyQualifiedClassName #>.Retouch(factory);
-                factory.id = Registry.Global.RegisterEntityFactory(factory);
+                factory.id = Registry.Global.EntityFactory.AddForCurrentMod(factory);
                 <#= entityType.FullyQualifiedClassName #>.Factory = factory;
             }
 <#  } #>
