Debug more chains and paths, added flags to entity, move dying into MoreChains

--- a/Meta/Templates/ExportedStuffPrinter.tt
+++ b/Meta/Templates/ExportedStuffPrinter.tt
@@ -21,5 +21,11 @@ namespace <#= container.Namespace #>
 <#@ include file="Templates/Snippets/ContributedChains.txt" #>
 <# PopIndent(); #>
 
+        static <#= container.ClassName #>()
+        { <# PushIndent("          "); #>
+<#@ include file="Templates/Snippets/StaticConstructorContentForExporting.txt" #>
+<# PopIndent(); #>
+        }
+
     }
 }
