--- a/Meta/Templates/BehaviorPrinter.tt
+++ b/Meta/Templates/BehaviorPrinter.tt
@@ -23,7 +23,13 @@ namespace <#= behavior.Namespace #>
 <#@ include file="Templates/Snippets/HandlersFromExportedMethods.txt" #>
 
 <#@ include file="Templates/Snippets/ContributedChains.txt" #>
+
 <# PopIndent(); #>
+        static <#= behavior.ClassName #>()
+        { <# PushIndent("          "); #>
+<#@ include file="Templates/Snippets/StaticConstructorContentForExporting.txt" #>
+<# PopIndent(); #>
+        }
 
     }
 
