--- a/Meta/Templates/ComponentPrinter.tt
+++ b/Meta/Templates/ComponentPrinter.tt
@@ -21,8 +21,13 @@ namespace <#= component.Namespace #>
 <#@ include file="Templates/Snippets/HandlersFromExportedMethods.txt" #>
 
 <#@ include file="Templates/Snippets/ContributedChains.txt" #>
-<# PopIndent(); #>
 
+<# PopIndent(); #>
+        static <#= container.ClassName #>()
+        { <# PushIndent("          "); #>
+<#@ include file="Templates/Snippets/StaticConstructorContentForExporting.txt" #>
+<# PopIndent(); #>
+        }
     }
 
     public static class <#= component.ClassName #>EntityExtensions
