--- a/Meta/Templates/BehaviorPrinter.tt
+++ b/Meta/Templates/BehaviorPrinter.tt
@@ -23,12 +23,13 @@ namespace <#= behavior.Namespace #>
 <#@ include file="Templates/Snippets/HandlersFromExportedMethods.txt" #>
 
 <#@ include file="Templates/Snippets/ContributedChains.txt" #>
+<# PopIndent(); #>
 
-<# PopIndent(); #>
-        static <#= behavior.ClassName #>()
-        { <# PushIndent("          "); #>
-<#@ include file="Templates/Snippets/StaticConstructorContentForExporting.txt" #>
-<# PopIndent(); #>
+        static <#= container.ClassName #>()
+        { <# PushIndent("            "); #>
+        
+<#@ include file="Templates/Snippets/StaticConstructorContentForExporting.txt" #><# PopIndent(); #>
+
         }
 
     }
